// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components/Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jAaTju daAYrj"
  >
    <table
      className="sc-jDwBTQ lsgth"
    >
      <tbody
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            US
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            PL
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Warsaw
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            DE
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Berlin
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            FR
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Paris
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            ES
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Madird
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jAaTju daAYrj"
  >
    <table
      className="sc-jDwBTQ lsgth"
    >
      <thead
        className="sc-gPEVay eQYmiW"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <th
            className="sc-csuQGl cfrWfQ"
          >
            Code
          </th>
          <th
            className="sc-csuQGl cfrWfQ"
          >
            Capital
          </th>
          <th
            className="sc-csuQGl cfrWfQ"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            US
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            PL
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Warsaw
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            DE
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Berlin
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            FR
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Paris
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik cibghR"
          >
            ES
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Madird
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jAaTju daAYrj"
  >
    <table
      className="sc-jDwBTQ lsgth"
    >
      <thead
        className="sc-gPEVay eQYmiW"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <th
            className="sc-csuQGl cfrWfQ"
          >
            #
          </th>
          <th
            className="sc-csuQGl cfrWfQ"
          >
            Code
          </th>
          <th
            className="sc-csuQGl cfrWfQ"
          >
            Capital
          </th>
          <th
            className="sc-csuQGl cfrWfQ"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm gsWhXA"
          >
            1
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            US
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm gsWhXA"
          >
            2
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            PL
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Warsaw
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm gsWhXA"
          >
            3
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            DE
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Berlin
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm gsWhXA"
          >
            4
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            FR
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Paris
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm gsWhXA"
          >
            5
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            ES
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Madird
          </td>
          <td
            className="sc-gipzik cibghR"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
